--- a/package.json
+++ b/package.json
@@ -1,54 +1,20 @@
 {
-  "name": "@tigateam/tiga-ui",
-  "version": "0.0.5",
-  "description": "tiga-ui is a high quality Vue component library",
+  "name": "tiga-ui",
+  "version": "0.0.1",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "help": "vite -h",
+    "help:build": "vite build -h",
+    "serve:dev": "vite",
+    "serve:example": "vite --config build/vite.config.example.js",
+    "build": "vite build",
+    "build:lib": "vite build --config build/vite.config.lib.js"
   },
-  "keywords": ["tiga", "tigateam", "tigaui", "ui", "component", "components", "component lib", "vue", "vue component", "组件库", "vue组件库"],
-  "author": "tigateam",
-  "license": "ISC",
-  "homepage": "https://tigaui.tigateam.com",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/tigateam/tiga-ui/"
-  },
-  "contributors": [{
-    "name": "misitebao",
-    "email": "i@misitebao.com"
-  }],
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^3.0.0-0"
+    "vue": "^3.0.0-rc.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0-0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "@vue/compiler-sfc": "^3.0.0-rc.1",
+    "stylus": "^0.54.8",
+    "vite": "^1.0.0-rc.1"
+  }
 }
