--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "TigaUI is a high quality component library based on `vue2.x`",
   "main": "index.js",
   "scripts": {
-    "serve:doc": "vuepress dev docs",
-    "build:doc": "vuepress build docs",
+    "test":"",
+    "serve:doc": "",
+    "build:doc": "",
+    "build": "npm-run-all --parallel build:**",
     "build:lib:all": "webpack --config build/build-lib-all.js",
     "build:lib:components": "webpack --config build/build-lib-components.js",
     "build:lib:styles": "",
@@ -13,13 +15,14 @@
     "serve:example": "aaaa"
   },
   "keywords": [
-    "",
-    ""
+    "tigaui",
+    "tigateam",
+    "vue",
+    "components"
   ],
   "author": "TigaTeam",
   "license": "MIT",
   "devDependencies": {
-    "@vuepress/plugin-back-to-top": "^1.7.1",
-    "vuepress": "^1.7.1"
+    "npm-run-all": "^4.1.5"
   }
 }
